# TiktokGen

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  vcpkg.json
modules/: CMakeLists.txt
modules/ffmpeg_build/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
modules/ffmpeg_build/share/man/man1/: ffmpeg-all.1  ffmpeg-filters.1  ffmpeg.1  ffprobe-all.1
resources/: config_example.cfg  sample.aac
src/model/generators/: Generator.h
src/model/generators/audio_generators/: AddAudioGenerator.cpp  AddAudioGenerator.h  AudioGenerator.cpp  AudioGenerator.h
src/model/generators/frame_generators/: FrameGenerator.cpp  FrameGenerator.h  NoneGenerator.cpp  NoneGenerator.h  TelegramRandomGenerator.cpp  TelegramRandomGenerator.h  TextVideoGenerator.cpp  TextVideoGenerator.h
src/model/generators/frame_generators/utils/: GeneratorName.h  GeneratorRequirement.h  GeneratorRequirementType.h
src/model/generators/requirements/: GeneratorRequirement.cpp  GeneratorRequirement.h  IGeneratorRequirement.h  InputTextRequirement.cpp  InputTextRequirement.h  TelegramRandomRequirement.cpp  TelegramRandomRequirement.h  VideoChooseRequirement.cpp  VideoChooseRequirement.h
src/model/generators/requirements/utils/: TelegramClient.cpp  TelegramClient.h  TelegramListenerThread.cpp  TelegramListenerThread.h  ThreadWrapper.cpp  ThreadWrapper.h
src/model/generators/video_generators/: VideoGenerator.cpp  VideoGenerator.h
src/model/user/: Config.cpp  Config.h  ConfigRead.cpp  ConfigRead.h  UserState.h
src/view/: MainView.cpp  MainView.h  Renderer.cpp  Renderer.h
src/view/utils/: SDLWindowDeleter.h  SDL_GLContextDeleter.h  TextFunctions.h
src/view_model/: MainViewModel.cpp  MainViewModel.h
src/view_model/utils/: LogFunctions.h  StringFunctions.h
